가로스크롤 진행 중 0530

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./jquery.fullPage.css">
     <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
- 
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  -->
 
 
 </head>
@@ -80,7 +80,61 @@
                 </div>
             </div>
        </section>
-       <section class="section">3</section>
+         <!-------ARTIST ------->
+       <section class="section artist">
+         <div class="container">
+            <div class="artist-horizontal">
+                <div class="artist-wrapper">
+                    <div class="artist-item">
+                        <img src="./images/송강.jpg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/박지현.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/구교환.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/서현.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/202207110915107676_t.jpg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/202207110915107676_t.jpg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>강기영</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+               
+                
+
+            </div>
+         </div>
+       </section>
        <section class="section">4</section>
        <section class="section">5</section>
        <section class="section">6</section>
