가로스크롤 0531

--- a/index.html
+++ b/index.html
@@ -83,48 +83,114 @@
          <!-------ARTIST ------->
        <section class="section artist">
          <div class="container">
+            <div class="title">
+                <p>ARTIST</p>
+            </div>
             <div class="artist-horizontal">
                 <div class="artist-wrapper">
                     <div class="artist-item">
-                        <img src="./images/송강.jpg" alt="">
+                        <img src="./images/artist-1.jpg" alt="">
+                        <div class="artist-txt">
+                            <span>Kang ki Young</span>
+                            <p>송 강</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-2.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Park Ji Hyun</span>
+                            <p>박지현</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-3.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Koo Kyo Hwan</span>
+                            <p>구교환</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-4.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Seo Hyun</span>
+                            <p>서 현</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-5.webp" alt="">
                         <div class="artist-txt">
                             <span>Kang ki Young</span>
                             <p>강기영</p>
                         </div>
                     </div>
                     <div class="artist-item">
-                        <img src="./images/박지현.jpeg" alt="">
+                        <img src="./images/artist-6.webp" alt="">
                         <div class="artist-txt">
-                            <span>Kang ki Young</span>
-                            <p>강기영</p>
+                            <span>Kim Hyo Jin</span>
+                            <p>김효진</p>
                         </div>
                     </div>
                     <div class="artist-item">
-                        <img src="./images/구교환.jpeg" alt="">
+                        <img src="./images/artist-7.webp" alt="">
                         <div class="artist-txt">
-                            <span>Kang ki Young</span>
-                            <p>강기영</p>
+                            <span>Park Eun Bin</span>
+                            <p>박은빈</p>
                         </div>
                     </div>
                     <div class="artist-item">
-                        <img src="./images/서현.jpeg" alt="">
+                        <img src="./images/artist-8.jpg" alt="">
                         <div class="artist-txt">
-                            <span>Kang ki Young</span>
-                            <p>강기영</p>
+                            <span>Cha Seo Won</span>
+                            <p>차서원</p>
                         </div>
                     </div>
                     <div class="artist-item">
-                        <img src="./images/202207110915107676_t.jpg" alt="">
+                        <img src="./images/artist-9.webp" alt="">
                         <div class="artist-txt">
-                            <span>Kang ki Young</span>
-                            <p>강기영</p>
+                            <span>Park Sun Ho</span>
+                            <p>박선호</p>
                         </div>
                     </div>
                     <div class="artist-item">
-                        <img src="./images/202207110915107676_t.jpg" alt="">
+                        <img src="./images/artist-10.webp" alt="">
                         <div class="artist-txt">
-                            <span>Kang ki Young</span>
-                            <p>강기영</p>
+                            <span>Lee Na Eun</span>
+                            <p>이나은</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-11.webp" alt="">
+                        <div class="artist-txt">
+                            <span>Ko Woo Rim</span>
+                            <p>고우림</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-12.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Yu Jun Sang</span>
+                            <p>유준상</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-13.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Kim Hwan Hee</span>
+                            <p>김환희</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-14.jpeg" alt="">
+                        <div class="artist-txt">
+                            <span>Lee Tae Seon</span>
+                            <p>이태선</p>
+                        </div>
+                    </div>
+                    <div class="artist-item">
+                        <img src="./images/artist-15.png" alt="">
+                        <div class="artist-txt">
+                            <span>Lee Yoon Ji</span>
+                            <p>이윤지</p>
                         </div>
                     </div>
                 </div>
