--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
       <!-- fullpage CDN -->
       <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
       <!-- fullpage jquery -->
+      <script src="./gambit-smoothscroll-min.js"></script>
       <script src="./jquery.fullPage.js"></script>
       <!-- JS LInk -->
       <script src="./js/customJQ.js"></script>
