롤링 슬라이드 진행중 0604

--- a/index.html
+++ b/index.html
@@ -250,6 +250,83 @@
             </div>
         </div>
 
+        <div class="news-wrapper">
+            <div class="news-wrap">
+                <div class="new-item">
+                    <img src="./images/news-1.jpg" alt="">
+                    <div class="new-text">
+                        <p class="new-head">엔터테이먼트<span>2023.05.23</span></p>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-2.jpg" alt="">
+                    <div class="new-text">
+                        <p class="new-head">인터뷰<span>2023.05.23</span></p>
+                        <p class="new-sub">송강, 맑고 순수하게</p>
+                        <em class="new-by">2023.05.20 by 김도근</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-3.jpg" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-4.webp" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-5.png" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-1.jpg" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-2.jpg" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-3.jpg" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+                <div class="new-item">
+                    <img src="./images/news-4.webp" alt="">
+                    <div class="new-text">
+                        <h3 class="new-head">엔터테이먼트<span>2023.05.23</span></h3>
+                        <p class="new-sub">박은빈, 데뷔 27년만 첫 백상 수상</p>
+                        <em class="new-by">2023.04.29 by 황소영</em>
+                    </div>
+                </div>
+            </div>
+        </div>
+
        </section>
 
         <!--------- Information  ---------->
