반응형 진행 중 0606

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./jquery.fullPage.css">
     <!-- AOS -->
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -38,6 +39,10 @@
                             <li><a href="#">News</a></li>
                             <li><a href="#">Audition</a></li>
                         </ul>
+
+                        <div class="mobile-menu-icon">
+                            <img src="./images/menu-icon.png" alt="">
+                        </div>
                     </div>
                 </header>
                 <div class="landing-page-maintxt">
@@ -365,7 +370,6 @@
                     <p><strong>Address. </strong>135-819 서울특별시 강남구 언주로 150길 34(논현동) 삼경빌딩 5층</p>
                     <p>5F Samkyung B/D 34, Eonju-ro 150-gil, Gangnam-gu, Seoul, Korea</p>
                     <p><strong>E-mail. </strong>abc123@gmail.com <strong>call. </strong>TEL : +82.1.2345.6789</p>
-                    
                 </div>
             </div>
        </section>
