--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
                     </a>
                   </div>
             </div>
+        <!-- Overlay Menus -->
+            <div class="overlay on">
+                <div class="overlay-menus-box">
+                    <div class="overlay-close">
+                        <img src="./images/close.png" alt="">
+                    </div>
+                    <div class="overlay-nav">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Artist</a></li>
+                            <li><a href="#">Centents</a></li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Audition</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
        </section>
 
          <!-------Company Intro ------->
