뉴스 롤링 슬라이드 진행 중0608

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   </div>
             </div>
         <!-- Overlay Menus -->
-            <div class="overlay on">
+            <div class="overlay">
                 <div class="overlay-menus-box">
                     <div class="overlay-close">
                         <img src="./images/close.png" alt="">
