반응형 작업 중 0612

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="scroll-btn">
                     <a href="#">
-                        <svg class="moving-circle" width="70" height="70" viewBox="0 0 168 168" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="moving-circle" viewBox="0 0 168 168" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M163 84C163 127.63 127.63 163 84 163C40.3695 163 5 127.63 5 84C5 40.3695 40.3695 5 84 5C127.63 5 163 40.3695 163 84Z" stroke="#fff" stroke-width="3"/>
                             </svg>
                       <span>scroll</span>
