--- a/index.html
+++ b/index.html
@@ -365,13 +365,17 @@
             <strong>연기자 분야의 재능 있는 신인</strong>을 모집합니다.</p>
             
             <div class="info-wrapper">
-                <div class="info-item"><span>오디션 지원(지원서, 사진, 영상 e-mail/우편 접수)</span></div>
-                <i class="fa-solid fa-caret-right"></i>
-                <div class="info-item"><span>1차 서류심사(합격자 개별 통보)</span></div>
-                <i class="fa-solid fa-caret-right"></i>
-                <div class="info-item"><span>2차 현장심사(지정연기, 자유연기 및 카메라테스트)</span></div>
-                <i class="fa-solid fa-caret-right"></i>
-                <div class="info-item"><span>3차 심층면접</span></div>
+                <div class="info-item-top">
+                    <div class="info-item"><span>오디션 지원(지원서, 사진, 영상 e-mail/우편 접수)</span></div>
+                    <i class="fa-solid fa-caret-right"></i>
+                    <div class="info-item"><span>1차 서류심사(합격자 개별 통보)</span></div>
+                    <i class="fa-solid fa-caret-right"></i>
+                </div>
+                <div class="info-item-bottom">
+                    <div class="info-item"><span>2차 현장심사(지정연기, 자유연기 및 카메라테스트)</span></div>
+                    <i class="fa-solid fa-caret-right"></i>
+                    <div class="info-item"><span>3차 심층면접</span></div>
+                </div>
             </div>
 
             <div class="info-bottom">
